<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/game_inputs"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/check_button">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.example.pajelingo.ui.LoadingSpinner
                    android:id="@+id/loading_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/verb_and_tense_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:gravity="center"
                    tools:text="Verb"
                    android:textSize="16sp"
                    />

                <com.example.pajelingo.ui.LabeledEditText
                    android:id="@+id/conjugation_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/verb_and_tense_text_view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/conjugation_2"
                    app:labelBias="0.5"
                    tools:label="Pronoun 1"
                    app:labelBold="false"
                    app:centerText="true"
                    />

                <com.example.pajelingo.ui.LabeledEditText
                    android:id="@+id/conjugation_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/conjugation_1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/conjugation_3"
                    app:labelBias="0.5"
                    tools:label="Pronoun 2"
                    app:labelBold="false"
                    app:centerText="true"
                    />

                <com.example.pajelingo.ui.LabeledEditText
                    android:id="@+id/conjugation_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/conjugation_2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/conjugation_4"
                    app:labelBias="0.5"
                    tools:label="Pronoun 3"
                    app:labelBold="false"
                    app:centerText="true"
                    />

                <com.example.pajelingo.ui.LabeledEditText
                    android:id="@+id/conjugation_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/conjugation_3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/conjugation_5"
                    app:labelBias="0.5"
                    tools:label="Pronoun 4"
                    app:labelBold="false"
                    app:centerText="true"
                    />

                <com.example.pajelingo.ui.LabeledEditText
                    android:id="@+id/conjugation_5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/conjugation_4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/conjugation_6"
                    app:labelBias="0.5"
                    tools:label="Pronoun 5"
                    app:labelBold="false"
                    app:centerText="true"
                    />

                <com.example.pajelingo.ui.LabeledEditText
                    android:id="@+id/conjugation_6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/conjugation_5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:labelBias="0.5"
                    tools:label="Pronoun 6"
                    app:labelBold="false"
                    app:centerText="true"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/check_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/game_inputs"
        android:layout_marginTop="8dp"
        android:text="@string/check_button_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>